src/objects/PSA_Card_Transaction_Item__c.object
<CustomObject>
    <fields>
        <fullName>Corporate_Card_Reimbursement_Amount__c</fullName>
        <label>Corporate Card Reimbursement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Amount_in_Original_Currency__c</fullName>
        <label>Amount in Original Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Card_Transaction__c</fullName>
        <label>PSA Card Transaction</label>
        <referenceTo>PSA_Card_Transaction__c</referenceTo>
        <relationshipLabel>PSA Card Transaction Items</relationshipLabel>
        <relationshipName>PSA_Card_Transaction_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSA_Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Expense report this card transaction itemization is associated with</description>
        <inlineHelpText>Expense report this card transaction itemization is associated with</inlineHelpText>
        <label>Expense Report</label>
        <referenceTo>pse__Expense_Report__c</referenceTo>
        <relationshipLabel>PSA Card Transaction Items</relationshipLabel>
        <relationshipName>PSA_Card_Transaction_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PSA Card Transaction Item</label>
    <nameField>
        <displayFormat>PCT-{00000}</displayFormat>
        <label>PSA Card Transaction Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Card Transaction Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>